--- a/Example_ML_ToF.ipynb
+++ b/Example_ML_ToF.ipynb
@@ -923,7 +923,7 @@
         "id": "LHOqJO75_rP0"
       },
       "source": [
-        "Uncertain patterns, in this case there is one uncertain patterns, the probability is uniformly distributed. so we dont t\n"
+        "Uncertain patterns, in this case there is one uncertain patterns, the probability is uniformly distributed. so we discard this candidate\n"
       ]
     },
     {
